--- a/gradpage/templates/gradpage/chemical.html
+++ b/gradpage/templates/gradpage/chemical.html
@@ -1,10 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html lang="kor">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>졸업을 도와조 : 화학</title>
 
-</body>
+    <link rel="stylesheet" href="./css/global.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header class="hd">
+        <div class="left-line">
+          <hr />
+          <hr />
+        </div>
+        <div class="logo">
+          <a href="#">
+            <img src="image/logo.png" alt="로고" />
+          </a>
+        </div>
+        <div class="center-line">
+          <hr />
+          <hr />
+        </div>
+        <div class="user">
+          <div class="login-username">
+            <div class="login">
+              <a href="#">
+                <p>LOGIN / SIGNUP</p>
+              </a>
+            </div>
+          </div>
+          <a href="#">
+            <div class="profile">
+              <p>MYPAGE</p>
+              <img src="./image/user.png" alt="프로필" /></div
+          ></a>
+        </div>
+        <div class="right-line">
+          <hr />
+          <hr />
+        </div>
+      </header>
+
+      <section class="sec">
+        <div class="content">
+          <div class="dept">
+            <!-- 대학 정보 -->
+            <div class="univ">
+              <p>화학전공</p>
+              <p style="font-size: 1.7em">Chemistry</p>
+            </div>
+            <div class="select-dept">
+              <div class="univ-name">
+                <p>과학기술대학</p>
+              </div>
+              <div class="choose">
+                <form action="#" method="POST">
+                  <!-- changeDept -->
+                  <select name="dept-tech" id="input-dropdown">
+                    <option disabled value="">전공을 선택해주세요. ▼</option>
+                    <option value="computer">컴퓨터공학전공</option>
+                    <option value="itmedia">IT미디어공학전공</option>
+                    <option value="bio">바이오공학전공</option>
+                    <option value="cyber">사이버보안전공</option>
+                    <option value="software">소프트웨어전공</option>
+                    <option value="sports">생활체육학전공</option>
+                    <option value="food">식품영양학전공</option>
+                    <option value="infstatistic">정보통계학전공</option>
+                    <option selected value="chemical">화학전공</option>
+                    <option value="math">수학전공</option>
+                  </select>
+                  <input type="submit" value="선택" id="choose-btn" />
+                </form>
+              </div>
+            </div>
+          </div>
+
+          <div class="box">
+            졸업요건
+            <div class="contentbox">
+              1. 졸업시험 (아래 6개 영역 중 4개 이상 통과)<br />
+              (1)분석화학, (2)무기화학, (3)유기화학, (4)생화학, (5)물리화학, (6)어학시험 성적표 제출(TOEIC 700 이상, New TEPS 326이상, TOEFL CBT 210이상, IBT 84이상)<br />
+              2. 실험 수업 이수<br />
+              일반화학실험, 분석화학실험, 유기화학실험1, 유기화학실험2, 물리화학실험1, 물리화학실험2, 생화학실험, 무기화학실험, 특수연구실험1, 특수연구실험2 중 5과목 이상 이수<br />
+              * 상기 모두 충족해야 함.<br />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="ft">
+        <hr />
+        <hr />
+      </footer>
+
+      <navigation class="nav">
+        <a href="#">
+          <div class="chat-button">
+            <img src="./image/speech-bubble.png" alt="챗봇" /></div
+        ></a>
+      </navigation>
+    </div>
+  </body>
 </html>
