--- a/gradpage/templates/gradpage/food.html
+++ b/gradpage/templates/gradpage/food.html
@@ -1,10 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html lang="kor">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>졸업을 도와조 : 식품영양학</title>
 
-</body>
+    <link rel="stylesheet" href="./css/global.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header class="hd">
+        <div class="left-line">
+          <hr />
+          <hr />
+        </div>
+        <div class="logo">
+          <a href="#">
+            <img src="image/logo.png" alt="로고" />
+          </a>
+        </div>
+        <div class="center-line">
+          <hr />
+          <hr />
+        </div>
+        <div class="user">
+          <div class="login-username">
+            <div class="login">
+              <a href="#">
+                <p>LOGIN / SIGNUP</p>
+              </a>
+            </div>
+          </div>
+          <a href="#">
+            <div class="profile">
+              <p>MYPAGE</p>
+              <img src="./image/user.png" alt="프로필" /></div
+          ></a>
+        </div>
+        <div class="right-line">
+          <hr />
+          <hr />
+        </div>
+      </header>
+
+      <section class="sec">
+        <div class="content">
+          <div class="dept">
+            <!-- 대학 정보 -->
+            <div class="univ">
+              <p>식품영양학전공</p>
+              <p style="font-size: 1.7em">Food & Nutrition</p>
+            </div>
+            <div class="select-dept">
+              <div class="univ-name">
+                <p>과학기술대학</p>
+              </div>
+              <div class="choose">
+                <form action="#" method="POST">
+                  <!-- changeDept -->
+                  <select name="dept-tech" id="input-dropdown">
+                    <option disabled value="">전공을 선택해주세요. ▼</option>
+                    <option value="computer">컴퓨터공학전공</option>
+                    <option value="itmedia">IT미디어공학전공</option>
+                    <option value="bio">바이오공학전공</option>
+                    <option value="cyber">사이버보안전공</option>
+                    <option value="software">소프트웨어전공</option>
+                    <option value="sports">생활체육학전공</option>
+                    <option selected value="food">식품영양학전공</option>
+                    <option value="infstatistic">정보통계학전공</option>
+                    <option value="chemical">화학전공</option>
+                    <option value="math">수학전공</option>
+                  </select>
+                  <input type="submit" value="선택" id="choose-btn" />
+                </form>
+              </div>
+            </div>
+          </div>
+
+          <div class="box">
+            졸업요건
+            <div class="contentbox">
+              1. 심화전공의 경우 영양사 국가고시 응시를 위한 18과목 52학점 이상을 이수하여야 함.<br />
+              2. 식품영양학전공은 영양사 국가고시 교과목 18과목 이상을 이수해야 하므로 선수과목을 지정하지 않음.<br />
+              3. 전공 실습 과목 (8과목 중 2과목 이상 리포트 제출)<br />
+              식품화학 및 실습, 식품미생물학 및 실습, 식품가공저장학 및 실습, 고급영양학 및 실습, 식품분석 및 실습, 식사요법 및 실습, 실험조리 및 실습, 식생활관리 및 실습 <br />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="ft">
+        <hr />
+        <hr />
+      </footer>
+
+      <navigation class="nav">
+        <a href="#">
+          <div class="chat-button">
+            <img src="./image/speech-bubble.png" alt="챗봇" /></div
+        ></a>
+      </navigation>
+    </div>
+  </body>
 </html>
