--- a/gradpage/templates/gradpage/technology.html
+++ b/gradpage/templates/gradpage/technology.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>졸업을 도와조 : 과학기술대학</title>
-
-    <link rel="stylesheet" href="./css/dept.css" />
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/dept.css' %}" />
 </head>
 <body>
     <div class="container">
@@ -16,8 +16,8 @@
         <hr />
         </div>
         <div class="logo">
-        <a href="#">
-            <img src="./image/logo.png" alt="로고" />
+        <a href="/">
+            <img src="{% static 'image/logo.png' %}" alt="로고" />
         </a>
         </div>
         <div class="center-line">
@@ -35,7 +35,7 @@
         <a href="#">
             <div class="profile">
             <p>MYPAGE</p>
-            <img src="./image/user.png" alt="프로필" /></div
+            <img src="{% static 'image/user.png' %}" alt="프로필" /></div
         ></a>
         </div>
         <div class="right-line">
@@ -51,30 +51,6 @@
             <div class="univ">
             <p>과학기술대학</p>
             <p style="font-size: 1.7em">Colleage of Science and Technology</p>
-            </div>
-            <div class="select-dept">
-            <div class="univ-name">
-                <p>과학기술대학</p>
-            </div>
-            <div class="choose">
-                <form action="#" method="POST">
-                <!-- changeDept -->
-                <select name="dept-tech" id="input-dropdown">
-                    <option selected disabled value="">전공을 선택해주세요. ▼</option>
-                    <option value="computer">컴퓨터공학전공</option>
-                    <option value="itmedia">IT미디어공학전공</option>
-                    <option value="bio">바이오공학전공</option>
-                    <option value="cyber">사이버보안전공</option>
-                    <option value="software">소프트웨어전공</option>
-                    <option value="sports">생활체육학전공</option>
-                    <option value="food">식품영양학전공</option>
-                    <option value="infstatistic">정보통계학전공</option>
-                    <option value="chemical">화학전공</option>
-                    <option value="math">수학전공</option>
-                </select>
-                <input type="submit" value="선택" id="choose-btn" />
-                </form>
-            </div>
             </div>
         </div>
         <script>
@@ -114,11 +90,9 @@
             </div></a
             >
             <a href="#">
-                <div class="sub-box-1">
-                    <p>과학기술대학</p>
-                </div>
-            </a>
-            
+                <div class="sub-box">
+                    <p>바이오공학전공</p>
+                </div></a>
             </a
             ><a href="{% url 'cyber_department' %}">
             <div class="sub-box">
@@ -165,7 +139,7 @@
     <navigation class="nav">
         <a href="#">
         <div class="chat-button">
-            <img src="./image/speech-bubble.png" alt="챗봇" /></div
+            <img src="{% static 'image/speech-bubble.png' %}" alt="챗봇" /></div
         ></a>
     </navigation>
     </div>
