--- a/gradpage/templates/gradpage/food.html
+++ b/gradpage/templates/gradpage/food.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>졸업을 도와조 : 식품영양학</title>
-
-    <link rel="stylesheet" href="./css/global.css" />
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/global.css' %}" />
   </head>
   <body>
     <div class="container">
@@ -16,8 +16,8 @@
           <hr />
         </div>
         <div class="logo">
-          <a href="#">
-            <img src="image/logo.png" alt="로고" />
+          <a href="/">
+            <img src="{% static 'image/logo.png' %}" alt="로고" />
           </a>
         </div>
         <div class="center-line">
@@ -35,7 +35,7 @@
           <a href="#">
             <div class="profile">
               <p>MYPAGE</p>
-              <img src="./image/user.png" alt="프로필" /></div
+              <img src="{% static 'image/user.png' %}" alt="프로필" /></div
           ></a>
         </div>
         <div class="right-line">
@@ -58,19 +58,20 @@
               </div>
               <div class="choose">
                 <form action="#" method="POST">
+                  {% csrf_token %}
                   <!-- changeDept -->
                   <select name="dept-tech" id="input-dropdown">
                     <option disabled value="">전공을 선택해주세요. ▼</option>
-                    <option value="computer">컴퓨터공학전공</option>
-                    <option value="itmedia">IT미디어공학전공</option>
-                    <option value="bio">바이오공학전공</option>
-                    <option value="cyber">사이버보안전공</option>
-                    <option value="software">소프트웨어전공</option>
-                    <option value="sports">생활체육학전공</option>
-                    <option selected value="food">식품영양학전공</option>
-                    <option value="infstatistic">정보통계학전공</option>
-                    <option value="chemical">화학전공</option>
-                    <option value="math">수학전공</option>
+                    <option value="컴퓨터공학">컴퓨터공학전공</option>
+                    <option value="IT미디어공학">IT미디어공학전공</option>
+                    <option value="바이오공학전공">바이오공학전공</option>
+                    <option value="사이버보안전공">사이버보안전공</option>
+                    <option value="소프트웨어전공">소프트웨어전공</option>
+                    <option value="생활체육학전공">생활체육학전공</option>
+                    <option selected value="식품영양학전공">식품영양학전공</option>
+                    <option value="정보통계학전공">정보통계학전공</option>
+                    <option value="화학전공">화학전공</option>
+                    <option value="수학전공">수학전공</option>
                   </select>
                   <input type="submit" value="선택" id="choose-btn" />
                 </form>
@@ -98,7 +99,7 @@
       <navigation class="nav">
         <a href="#">
           <div class="chat-button">
-            <img src="./image/speech-bubble.png" alt="챗봇" /></div
+            <img src="{% static 'js/preview-file.js' %}" alt="챗봇" /></div
         ></a>
       </navigation>
     </div>
